try fix alignment on mobile

--- a/src/styles/NotePage.css
+++ b/src/styles/NotePage.css
@@ -18,9 +18,11 @@
 .note-title-input {
   background-color: unset;
   width: 100%;
+  text-align: left;
   border: none;
   outline: none;
   font-size: 2.1rem;
+  line-height: 1.5;
   font-family: 'Montserrat', sans-serif;
   font-weight: bold;
   color: #cc0033;
@@ -42,8 +44,8 @@
 }
 
 .input-field {
-  margin-left: 0px;
-  margin-bottom: 0.3em;
+  margin: 0;
+  padding: 0;
 }
 
 .textarea-field {
